--- a/app_social_login/static/src/scss/website_profile.scss
+++ b/app_social_login/static/src/scss/website_profile.scss
@@ -34,6 +34,10 @@
 
 }
 
+.o_wprofile_gradient {
+    background-image: linear-gradient(120deg, $primary, darken($primary, 10%));
+}
+
 .o_wprofile_header {
     @include media-breakpoint-up(md)  {
         &:after {
