--- a/app_social_login/static/src/scss/website_profile.scss
+++ b/app_social_login/static/src/scss/website_profile.scss
@@ -52,7 +52,7 @@
             content: "";
             @include o-position-absolute(auto, 0, 0, 0);
             height: $owprofile-tabs-height;
-            background: #875A7B;
+            background: $primary;
             margin-bottom: -$owprofile-tabs-height
         }
     }
