--- a/app_social_login/views/templates.xml
+++ b/app_social_login/views/templates.xml
@@ -41,26 +41,29 @@
                 </li>
             </xpath>
 
-            <xpath expr="//ul[@id='profile_extra_info_tablist']" position="inside">
+            <xpath expr="//ul[@id='profile_extra_info_tablist']/li" position="before">
+                <li class="nav-item">
+                    <a t-if="user_products" role="tab" aria-controls="products" href="#products"
+                       class="nav-link o_wprofile_navlink"
+                       data-toggle="tab">Stores</a>
+                </li>
+
+                <li class="nav-item">
+                    <a t-if="user_favorites" role="tab" aria-controls="favorites" href="#favorites"
+                       class="nav-link o_wprofile_navlink"
+                       data-toggle="tab">Likes</a>
+                </li>
+
+                <li class="nav-item">
+                    <a t-if="user_blogs" role="tab" aria-controls="blogs" href="#blogs"
+                       class="nav-link o_wprofile_navlink"
+                       data-toggle="tab">Videos</a>
+                </li>
+
                 <li class="nav-item">
                     <a t-if="user_events" role="tab" aria-controls="events" href="#events"
                        class="nav-link o_wprofile_navlink"
                        data-toggle="tab">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a t-if="user_blogs" role="tab" aria-controls="blogs" href="#blogs"
-                       class="nav-link o_wprofile_navlink"
-                       data-toggle="tab">Blogs</a>
-                </li>
-                <li class="nav-item">
-                    <a t-if="user_products" role="tab" aria-controls="products" href="#products"
-                       class="nav-link o_wprofile_navlink"
-                       data-toggle="tab">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a t-if="user_favorites" role="tab" aria-controls="favorites" href="#favorites"
-                       class="nav-link o_wprofile_navlink"
-                       data-toggle="tab">Favorites</a>
                 </li>
             </xpath>
 
@@ -92,7 +95,7 @@
                     <div class="mb32">
                        <t t-if="user_blogs">
                             <h5 class="border-bottom pb-1">
-                                <i class="fa fa-globe mr-2"/> Blogs
+                                <i class="fa fa-globe mr-2"/> Videos
                             </h5>
 
                             <ul class="list-group mb-3">
@@ -112,7 +115,7 @@
                     <div class="mb32">
                         <t t-if="user_products">
                             <h5 class="border-bottom pb-1">
-                                <i class="fa fa-globe mr-2"/> Products
+                                <i class="fa fa-globe mr-2"/> Store
                             </h5>
 
                             <ul class="list-group mb-3">
@@ -132,7 +135,7 @@
                     <div class="mb32">
                         <t t-if="user_favorites">
                             <h5 class="border-bottom pb-1">
-                                <i class="fa fa-globe mr-2"/> Favorites
+                                <i class="fa fa-globe mr-2"/> Likes
                             </h5>
 
                             <ul class="list-group mb-3">
