--- a/website_profile_b4u/static/src/scss/website_profile.scss
+++ b/website_profile_b4u/static/src/scss/website_profile.scss
@@ -1,5 +1,5 @@
 .o_wprofile_nav_tabs {
-    @include media-breakpoint-up(md)  {
+    @include media-breakpoint-up(xs)  {
         margin-top: 0;
         border-bottom: 0;
 
@@ -39,7 +39,7 @@
 }
 
 .o_wprofile_header {
-    @include media-breakpoint-up(md)  {
+    @include media-breakpoint-up(xs)  {
         &:after {
             content: "";
             @include o-position-absolute(auto, 0, 0, 0);
