--- a/website_profile_b4u/static/src/scss/website_profile.scss
+++ b/website_profile_b4u/static/src/scss/website_profile.scss
@@ -71,3 +71,13 @@
     }
 }
 
+.o_wprofile_tabs_content {
+    @include media-breakpoint-down(sm) {
+        //background-color: $nav-tabs-link-active-bg;
+        padding:0 ($grid-gutter-width * 0.5);
+    }
+
+    @include media-breakpoint-only(xs) {
+        margin: 0 ($grid-gutter-width * -0.5);
+    }
+}
